--- a/App/Bioscopify/app/src/main/AndroidManifest.xml
+++ b/App/Bioscopify/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     package="com.example.rickyberg.bioscopify">
 
     <uses-permission android:name="android.permission.CALL_PHONE" />
-
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
