--- a/App/Bioscopify/app/src/main/AndroidManifest.xml
+++ b/App/Bioscopify/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyBseopqdTQGL4sOnneFYlsesjvJNsQl5KI" />
+
+
         <activity
             android:name=".PresentationLayer.MainActivity"
             android:label="@string/app_name"
