--- a/App/Bioscopify/app/src/main/AndroidManifest.xml
+++ b/App/Bioscopify/app/src/main/AndroidManifest.xml
@@ -28,7 +28,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PresentationLayer.Contact" />
+        <activity android:name=".PresentationLayer.Contact"
+                android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".PresentationLayer.DetailActivity"></activity>
     </application>
 
