--- a/App/Bioscopify/app/src/main/AndroidManifest.xml
+++ b/App/Bioscopify/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/bioscopify_logo_resized"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/CustomActionBarTheme">
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -30,7 +30,10 @@
         </activity>
         <activity android:name=".PresentationLayer.Contact"
                 android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".PresentationLayer.DetailActivity"></activity>
+        <activity android:name=".PresentationLayer.DetailActivity">
+            <meta-data android:name="android.support.PARENT_ACTIVITY"
+                android:value=".PresentationLayer.MainActivity"/>
+        </activity>
     </application>
 
 </manifest>
