--- a/App/Bioscopify/app/src/main/AndroidManifest.xml
+++ b/App/Bioscopify/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
                 android:value=".PresentationLayer.MainActivity" />
         </activity>
         <activity android:name=".PresentationLayer.TicketSelectActivity" />
-        <activity android:name=".PresentationLayer.TicketSelectActivity"></activity>
+        <activity android:name=".PresentationLayer.SeatSelectActivity"/>
     </application>
 
 </manifest>
