Added: Filter functionaliteit

--- a/App/Bioscopify/app/src/main/AndroidManifest.xml
+++ b/App/Bioscopify/app/src/main/AndroidManifest.xml
@@ -33,7 +33,8 @@
                 android:value=".PresentationLayer.MainActivity" />
         </activity>
         <activity android:name=".PresentationLayer.TicketSelectActivity" />
-        <activity android:name=".PresentationLayer.SeatSelectActivity"/>
+        <activity android:name=".PresentationLayer.SeatSelectActivity" />
+        <activity android:name=".PresentationLayer.FilterActivity"></activity>
     </application>
 
 </manifest>
