--- a/App/Bioscopify/app/src/main/AndroidManifest.xml
+++ b/App/Bioscopify/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -34,12 +34,12 @@
                 android:value=".PresentationLayer.MainActivity" />
         </activity>
         <activity android:name=".PresentationLayer.TicketSelectActivity" />
-        <activity android:name=".PresentationLayer.SeatSelectActivity"/>
-        <activity android:name=".PresentationLayer.PayOrderActivity"/>
-        <activity android:name=".PresentationLayer.ProcessingActivity"/>
-        <activity android:name=".PresentationLayer.ConfirmationActivity"/>
-
-        <activity android:name=".PresentationLayer.FilterActivity"></activity>
+        <activity android:name=".PresentationLayer.SeatSelectActivity" />
+        <activity android:name=".PresentationLayer.PayOrderActivity" />
+        <activity android:name=".PresentationLayer.ProcessingActivity" />
+        <activity android:name=".PresentationLayer.ConfirmationActivity" />
+        <activity android:name=".PresentationLayer.FilterActivity" />
+        <activity android:name=".PresentationLayer.FilterViewActivity"/>
     </application>
 
 </manifest>
